@@ -3,12 +3,12 @@ from registry import message_codecs_registry
 import json
 
 class Encoder(object):
-  def encode(self, t):
+  def encode(self, a_string, a_int, a_float):
     """
     Will encode the tuple (a_string, a_int, a_float) to a Dummy msg.
     """
     m = Dummy()
-    m.a_string, m.a_int, m.a_float = t
+    m.a_string, m.a_int, m.a_float = a_string, a_int, a_float
     return m
 
 class Decoder(object):
