@@ -1,3 +1,11 @@
+2011-10-28    <simleo@neuron.crs4.it>
+
+	* bl/core/messages/Dummy.py (Encoder.encode): changed to take
+	separate parameters instead of a tuple.
+
+	* bl/core/io/message_stream.py (MessageStreamWriter.write):
+	changed to accept either a mapping or a tuple as payload.
+
 2011-09-27    <zag@manzanillo>
 
 	* bl/core/io/message_stream.py (MessageStreamWriter.write): Now we
